fix: preserve spacing

--- a/test/basic.expect.css
+++ b/test/basic.expect.css
@@ -8,17 +8,21 @@
 
 .test-changed-properties {
 	order: 1;
-	background-image: url(img/test.png);
+	background-image: 
+		url(img/test.png);
 	order: 2;
-	background-image: url(img/test.png);
+	background-image: 
+		url(img/test.png);
 	order: 3;
-	background-image: url(img/test.png);
+	background-image: 
+		url(img/test.png);
 }
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
 
 .test-changed-properties {
-	background-image: url(img/test-2x.png);
+	background-image: 
+		url(img/test-2x.png);
 }
 }
 
@@ -28,20 +32,23 @@
 		url(img/test-2x.png) 2x
 	);
 	order: 4;
-	background-image: url(img/test.png);
+	background-image: 
+		url(img/test.png);
 }
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
 
 .test-changed-properties {
-	background-image: url(img/test-2x.png);
+	background-image: 
+		url(img/test-2x.png);
 }
 }
 
 @media (-webkit-min-device-pixel-ratio: 6.25), (min-resolution: 600dpi) {
 
 .test-changed-properties {
-	background-image: url(my-img-print.png);
+	background-image: 
+		url(my-img-print.png);
 }
 }
 
@@ -56,13 +63,15 @@
 
 .test-mixed-units {
 	order: 1;
-	background-image: url(img/test.png);
+	background-image: 
+		url(img/test.png);
 }
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
 
 .test-mixed-units {
-	background-image: url(img/test-2x.png);
+	background-image: 
+		url(img/test-2x.png);
 }
 }
 
@@ -72,13 +81,15 @@
 		url(img/test-2x.png) 2dppx
 	);
 	order: 2;
-	background-image: url(img/test-2x.png);
+	background-image: 
+		url(img/test-2x.png);
 }
 
 @media (-webkit-min-device-pixel-ratio: 1), (min-resolution: 96dpi) {
 
 .test-mixed-units {
-	background-image: url(img/test.png);
+	background-image: 
+		url(img/test.png);
 }
 }
 
@@ -92,20 +103,23 @@
 
 .test-mixed-order {
 	order: 1;
-	background: url(../images/bck.png);
+	background: 
+		url(../images/bck.png);
 }
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
 
 .test-mixed-order {
-	background: url(../images/bck@2x.png);
+	background: 
+		url(../images/bck@2x.png);
 }
 }
 
 @media (-webkit-min-device-pixel-ratio: 3), (min-resolution: 288dpi) {
 
 .test-mixed-order {
-	background: url(../images/bck@3x.png);
+	background: 
+		url(../images/bck@3x.png);
 }
 }
 
@@ -116,20 +130,23 @@
 		url(../images/bck@2x.png) 2x
 	);
 	order: 2;
-	background: url(../images/bck.png);
+	background: 
+		url(../images/bck.png);
 }
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
 
 .test-mixed-order {
-	background: url(../images/bck@2x.png);
+	background: 
+		url(../images/bck@2x.png);
 }
 }
 
 @media (-webkit-min-device-pixel-ratio: 3), (min-resolution: 288dpi) {
 
 .test-mixed-order {
-	background: url(../images/bck@3x.png);
+	background: 
+		url(../images/bck@3x.png);
 }
 }
 
@@ -188,20 +205,23 @@
 
 .test-webkit-prefix {
 	order: 1;
-	background-image: url(img/test.png);
+	background-image: 
+		url(img/test.png);
 }
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
 
 .test-webkit-prefix {
-	background-image: url(img/test-2x.png);
+	background-image: 
+		url(img/test-2x.png);
 }
 }
 
 @media (-webkit-min-device-pixel-ratio: 6.25), (min-resolution: 600dpi) {
 
 .test-webkit-prefix {
-	background-image: url(my-img-print.png);
+	background-image: 
+		url(my-img-print.png);
 }
 }
 
@@ -216,16 +236,19 @@
 
 @media (min-width: 1000px) {
 	.test-within-mq-1 {
-		background-image: url(img/test.png);
+		background-image: 
+			url(img/test.png);
 	}
 	@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
 	.test-within-mq-1 {
-		background-image: url(img/test-2x.png);
+		background-image: 
+			url(img/test-2x.png);
 	}
 	}
 	@media (-webkit-min-device-pixel-ratio: 6.25), (min-resolution: 600dpi) {
 	.test-within-mq-1 {
-		background-image: url(my-img-print.png);
+		background-image: 
+			url(my-img-print.png);
 	}
 	}
 	.test-within-mq-1 {
@@ -239,16 +262,19 @@
 
 @media (min-width: 768px) and (max-width: 1024px) {
 	.test-within-mq-2 {
-		background-image: url(img/test.png);
+		background-image: 
+			url(img/test.png);
 	}
 	@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
 	.test-within-mq-2 {
-		background-image: url(img/test-2x.png);
+		background-image: 
+			url(img/test-2x.png);
 	}
 	}
 	@media (-webkit-min-device-pixel-ratio: 6.25), (min-resolution: 600dpi) {
 	.test-within-mq-2 {
-		background-image: url(my-img-print.png);
+		background-image: 
+			url(my-img-print.png);
 	}
 	}
 	.test-within-mq-2 {
